fixed background image on mobile sizing

--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,7 @@ body {
 @media (max-width: 500px) {
   body {
     padding-top: 6rem;
+    background-image: url("/imgs/book copy.jpg");
   }
 }
 html,
@@ -209,7 +210,7 @@ img {
 }
 @media (max-width: 500px) {
   .backgroundLanding {
-    background-image: url("/imgs/book.jpg");
+    background: none;
   }
 }
 .about-wrapper {
